==> vrxiaojie/STM32H743ZGT6/USER/touch.c <==
#include "touch.h"
#include "lcd.h"
#include "stdlib.h"
#include "math.h"
#include "stdint.h"

void TP_Write_Byte(uint8_t num)
{
	uint8_t count = 0;
	for (count = 0; count < 8; count++)
	{
		if (num & 0x80)
			HAL_GPIO_WritePin(MOSI_GPIO_Port, MOSI_Pin, GPIO_PIN_SET);
		else
			HAL_GPIO_WritePin(MOSI_GPIO_Port, MOSI_Pin, GPIO_PIN_RESET);
		num <<= 1;
		HAL_GPIO_WritePin(CLK_GPIO_Port, CLK_Pin, GPIO_PIN_RESET);

		delay_us(1);
		HAL_GPIO_WritePin(CLK_GPIO_Port, CLK_Pin, GPIO_PIN_SET); // 上升沿有效
	}
}

uint16_t TP_Read_AD(uint8_t CMD)
{
	uint8_t count = 0;
	uint16_t Num = 0;
	HAL_GPIO_WritePin(CLK_GPIO_Port, CLK_Pin, GPIO_PIN_RESET);	 // 先拉低时钟
	HAL_GPIO_WritePin(MOSI_GPIO_Port, MOSI_Pin, GPIO_PIN_RESET); // 拉低数据线
	HAL_GPIO_WritePin(T_CS_GPIO_Port, T_CS_Pin, GPIO_PIN_RESET); // 选中触摸屏IC
	TP_Write_Byte(CMD);											 // 发送命令字
	delay_us(6);												 // ADS7846的转换时间最长为6us
	HAL_GPIO_WritePin(CLK_GPIO_Port, CLK_Pin, GPIO_PIN_RESET);
	delay_us(1);
	HAL_GPIO_WritePin(CLK_GPIO_Port, CLK_Pin, GPIO_PIN_SET); // 给1个时钟，清除BUSY
	delay_us(1);
	HAL_GPIO_WritePin(CLK_GPIO_Port, CLK_Pin, GPIO_PIN_RESET);
	for (count = 0; count < 16; count++) // 读出16位数据,只有高12位有效
	{
		Num <<= 1;
		HAL_GPIO_WritePin(CLK_GPIO_Port, CLK_Pin, GPIO_PIN_RESET); // 下降沿有效
		delay_us(1);
		HAL_GPIO_WritePin(CLK_GPIO_Port, CLK_Pin, GPIO_PIN_SET);
		if (HAL_GPIO_ReadPin(MISO_GPIO_Port, MISO_Pin))
			Num++;
	}
	Num >>= 4;												   // 只有高12位有效.
	HAL_GPIO_WritePin(T_CS_GPIO_Port, T_CS_Pin, GPIO_PIN_SET); // 释放片选
	return (Num);
	// #endif
}

uint8_t TP_Scan(uint8_t tp)
{
	if (HAL_GPIO_ReadPin(PEN_GPIO_Port, PEN_Pin) == 0) // 有按键按下
	{
		if (tp)
			TP_Read_XY2(&tp_dev.x, &tp_dev.y);		// 读取物理坐标
		else if (TP_Read_XY2(&tp_dev.x, &tp_dev.y)) // 读取屏幕坐标
		{
			tp_dev.x = tp_dev.xfac * tp_dev.x + tp_dev.xoff; // 将结果转换为屏幕坐标
			tp_dev.y = tp_dev.yfac * tp_dev.y + tp_dev.yoff;
		}
		if ((tp_dev.sta & TP_PRES_DOWN) == 0) // 之前没有被按下
		{
			tp_dev.sta = TP_PRES_DOWN | TP_CATH_PRES; // 按键按下
			tp_dev.x0 = tp_dev.x;					  // 记录第一次按下时的坐标
			tp_dev.y0 = tp_dev.y;
		}
	}
	else
	{
		if (tp_dev.sta & TP_PRES_DOWN) // 之前是被按下的
		{
			tp_dev.sta &= ~(1 << 7); // 标记按键松开
		}
		else // 之前就没有被按下
		{
			tp_dev.x0 = 0;
			tp_dev.y0 = 0;
			tp_dev.x = 0xffff;
			tp_dev.y = 0xffff;
		}
	}
	return tp_dev.sta & TP_PRES_DOWN; // 返回当前的触屏状态
}

void TP_Adjust(void)
{
	uint16_t pos_temp[4][2]; // 坐标缓存值
	uint8_t cnt = 0;
	uint16_t d1, d2;
	uint32_t tem1, tem2;
	double fac;
	cnt = 0;
	POINT_COLOR = BLUE;
	BACK_COLOR = WHITE;
	LCD_Clear(WHITE);  // 清屏
	POINT_COLOR = RED; // 红色
	LCD_Clear(WHITE);  // 清屏
	POINT_COLOR = BLACK;
	LCD_ShowString(10, 40, 16, "Please touch cross marks on the screen,", 1); // 显示提示信息
	LCD_ShowString(10, 56, 16, "which will display 4 times.", 1);			  // 显示提示信息

	TP_Drow_Touch_Point(20, 20, RED); // 画点1
	tp_dev.sta = 0;					  // 消除触发信号
	tp_dev.xfac = 0;				  // xfac用来标记是否校准过,所以校准之前必须清掉!以免错误
	uint16_t Timer = HAL_GetTick();
	while (1) // 如果连续5秒钟没有按下,则自动退出
	{
		tp_dev.scan(1);							 // 扫描物理坐标
		if ((tp_dev.sta & 0xc0) == TP_CATH_PRES) // 按键按下了一次(此时按键松开了.)
		{
			Timer = HAL_GetTick();	 // 重置计时器
			tp_dev.sta &= ~(1 << 6); // 标记按键已经被处理过了.

			pos_temp[cnt][0] = tp_dev.x;
			pos_temp[cnt][1] = tp_dev.y;
			cnt++;
			switch (cnt)
			{
			case 1:
				TP_Drow_Touch_Point(20, 20, WHITE);				 // 清除点1
				TP_Drow_Touch_Point(lcddev.width - 20, 20, RED); // 画点2
				break;
			case 2:
				TP_Drow_Touch_Point(lcddev.width - 20, 20, WHITE); // 清除点2
				TP_Drow_Touch_Point(20, lcddev.height - 20, RED);  // 画点3
				break;
			case 3:
				TP_Drow_Touch_Point(20, lcddev.height - 20, WHITE);				 // 清除点3
				TP_Drow_Touch_Point(lcddev.width - 20, lcddev.height - 20, RED); // 画点4
				break;
			case 4: // 全部四个点已经得到
				// 对边相等
				tem1 = abs(pos_temp[0][0] - pos_temp[1][0]); // x1-x2
				tem2 = abs(pos_temp[0][1] - pos_temp[1][1]); // y1-y2
				tem1 *= tem1;
				tem2 *= tem2;
				d1 = sqrt(tem1 + tem2); // 得到1,2的距离

				tem1 = abs(pos_temp[2][0] - pos_temp[3][0]); // x3-x4
				tem2 = abs(pos_temp[2][1] - pos_temp[3][1]); // y3-y4
				tem1 *= tem1;
				tem2 *= tem2;
				d2 = sqrt(tem1 + tem2); // 得到3,4的距离
				fac = (float)d1 / d2;
				if (fac < 0.95 || fac > 1.05 || d1 == 0 || d2 == 0) // 不合格
				{
					cnt = 0;
					TP_Drow_Touch_Point(lcddev.width - 20, lcddev.height - 20, WHITE);																							 // 清除点4
					TP_Drow_Touch_Point(20, 20, RED);																															 // 画点1
					TP_Adj_Info_Show(pos_temp[0][0], pos_temp[0][1], pos_temp[1][0], pos_temp[1][1], pos_temp[2][0], pos_temp[2][1], pos_temp[3][0], pos_temp[3][1], fac * 100); // 显示数据
					continue;
				}
				tem1 = abs(pos_temp[0][0] - pos_temp[2][0]); // x1-x3
				tem2 = abs(pos_temp[0][1] - pos_temp[2][1]); // y1-y3
				tem1 *= tem1;
				tem2 *= tem2;
				d1 = sqrt(tem1 + tem2); // 得到1,3的距离

				tem1 = abs(pos_temp[1][0] - pos_temp[3][0]); // x2-x4
				tem2 = abs(pos_temp[1][1] - pos_temp[3][1]); // y2-y4
				tem1 *= tem1;
				tem2 *= tem2;
				d2 = sqrt(tem1 + tem2); // 得到2,4的距离
				fac = (float)d1 / d2;
				if (fac < 0.95 || fac > 1.05) // 不合格
				{
					cnt = 0;
					TP_Drow_Touch_Point(lcddev.width - 20, lcddev.height - 20, WHITE);																							 // 清除点4
					TP_Drow_Touch_Point(20, 20, RED);																															 // 画点1
					TP_Adj_Info_Show(pos_temp[0][0], pos_temp[0][1], pos_temp[1][0], pos_temp[1][1], pos_temp[2][0], pos_temp[2][1], pos_temp[3][0], pos_temp[3][1], fac * 100); // 显示数据
					continue;
				} // 正确了

				// 对角线相等
				tem1 = abs(pos_temp[1][0] - pos_temp[2][0]); // x1-x3
				tem2 = abs(pos_temp[1][1] - pos_temp[2][1]); // y1-y3
				tem1 *= tem1;
				tem2 *= tem2;
				d1 = sqrt(tem1 + tem2); // 得到1,4的距离

				tem1 = abs(pos_temp[0][0] - pos_temp[3][0]); // x2-x4
				tem2 = abs(pos_temp[0][1] - pos_temp[3][1]); // y2-y4
				tem1 *= tem1;
				tem2 *= tem2;
				d2 = sqrt(tem1 + tem2); // 得到2,3的距离
				fac = (float)d1 / d2;
				if (fac < 0.95 || fac > 1.05) // 不合格
				{
					cnt = 0;
					TP_Drow_Touch_Point(lcddev.width - 20, lcddev.height - 20, WHITE);																							 // 清除点4
					TP_Drow_Touch_Point(20, 20, RED);																															 // 画点1
					TP_Adj_Info_Show(pos_temp[0][0], pos_temp[0][1], pos_temp[1][0], pos_temp[1][1], pos_temp[2][0], pos_temp[2][1], pos_temp[3][0], pos_temp[3][1], fac * 100); // 显示数据
					continue;
				} // 正确了
				// 计算结果
				tp_dev.xfac = (float)(lcddev.width - 40) / (pos_temp[1][0] - pos_temp[0][0]);		// 得到xfac
				tp_dev.xoff = (lcddev.width - tp_dev.xfac * (pos_temp[1][0] + pos_temp[0][0])) / 2; // 得到xoff

				tp_dev.yfac = (float)(lcddev.height - 40) / (pos_temp[2][1] - pos_temp[0][1]);		 // 得到yfac
				tp_dev.yoff = (lcddev.height - tp_dev.yfac * (pos_temp[2][1] + pos_temp[0][1])) / 2; // 得到yoff
				if (abs(tp_dev.xfac) > 2 || abs(tp_dev.yfac) > 2)									 // 触屏和预设的相反了.
				{
					cnt = 0;
					TP_Drow_Touch_Point(lcddev.width - 20, lcddev.height - 20, WHITE); // 清除点4
					TP_Drow_Touch_Point(20, 20, RED);								   // 画点1
					LCD_ShowString(40, 26, 16, "TP Need readjust!", 1);
					tp_dev.touchtype = !tp_dev.touchtype; // 修改触屏类型.
					if (tp_dev.touchtype)				  // X,Y方向与屏幕相反
					{
						CMD_RDX = 0X90;
						CMD_RDY = 0XD0;
					}
					else // X,Y方向与屏幕相同
					{
						CMD_RDX = 0XD0;
						CMD_RDY = 0X90;
					}
					continue;
				}
				POINT_COLOR = BLUE;
				LCD_Clear(WHITE);										   // 清屏
				LCD_ShowString(35, 110, 16, "Touch Screen Adjust OK!", 1); // 校正完成
				HAL_Delay(300);
				TP_Save_Adjdata();
				// LCD_Clear(WHITE);//清屏
				ui_load_scr_animation(&guider_ui, &guider_ui.main_page, guider_ui.main_page_del,
									  &guider_ui.setting_screen_del, setup_scr_main_page, LV_SCR_LOAD_ANIM_OVER_RIGHT, 300, 50, false, true);
				return; // 校正完成
			}
		}
		HAL_Delay(10);
		if (HAL_GetTick() - Timer >= 5000)
			break;
	}
	ui_load_scr_animation(&guider_ui, &guider_ui.main_page, guider_ui.main_page_del,
						  &guider_ui.setting_screen_del, setup_scr_main_page, LV_SCR_LOAD_ANIM_OVER_RIGHT, 300, 50, false, true);
}

void TP_Save_Adjdata()
{
	int temp;
	// 保存校正结果
	// x校准参数的符号位
	if (tp_dev.xfac > 0)
		eeprom_write_data(0x2B, SAVE_ADDR_BASE, 1);
	else
		eeprom_write_data(0x2D, SAVE_ADDR_BASE, 1);
	temp = fabs(tp_dev.xfac * 100000000); // 保存x校正因素
	eeprom_write_data(temp, SAVE_ADDR_BASE + 1, 4);
	// y校准参数的符号位
	if (tp_dev.yfac > 0)
		eeprom_write_data(0x2B, SAVE_ADDR_BASE + 5, 1);
	else
		eeprom_write_data(0x2D, SAVE_ADDR_BASE + 5, 1);
	temp = fabs(tp_dev.yfac * 100000000); // 保存y校正因素
	eeprom_write_data(temp, SAVE_ADDR_BASE + 6, 4);
	// 保存x偏移量
	eeprom_write_data(tp_dev.xoff, SAVE_ADDR_BASE + 10, 2);
	// 保存y偏移量
	eeprom_write_data(tp_dev.yoff, SAVE_ADDR_BASE + 12, 2);
	// 保存触屏类型
	eeprom_write_data(tp_dev.touchtype, SAVE_ADDR_BASE + 14, 1);
	temp = 0X0A; // 标记校准过了
	eeprom_write_data(temp, SAVE_ADDR_BASE + 15, 1);
}

uint8_t TP_Get_Adjdata(void)
{
	uint32_t tempfac, sign;
	eeprom_read_data(&tempfac, SAVE_ADDR_BASE + 15, 1); // 读取标记字,看是否校准过！
	if (tempfac == 0X0A)								// 触摸屏已经校准过了
	{
		// x校准参数的符号位
		eeprom_read_data(&sign, SAVE_ADDR_BASE, 1);

		eeprom_read_data(&tempfac, SAVE_ADDR_BASE + 1, 4);
		tp_dev.xfac = ((float)tempfac / 100000000) * (sign == 0x2B ? 1 : -1); // 得到x校准参数

		// y校准参数的符号位
		eeprom_read_data(&sign, SAVE_ADDR_BASE + 5, 1);

		eeprom_read_data(&tempfac, SAVE_ADDR_BASE + 6, 4);
		tp_dev.yfac = ((float)tempfac / 100000000) * (sign == 0x2B ? 1 : -1); // 得到y校准参数
		// 得到x偏移量
		eeprom_read_data(&tempfac, SAVE_ADDR_BASE + 10, 2);
		tp_dev.xoff = tempfac;
		// 得到y偏移量
		eeprom_read_data(&tempfac, SAVE_ADDR_BASE + 12, 2);
		tp_dev.yoff = tempfac;
		eeprom_read_data(&tempfac, SAVE_ADDR_BASE + 14, 1); // 读取触屏类型标记
		tp_dev.touchtype = tempfac;
		if (tp_dev.touchtype) // X,Y方向与屏幕相反
		{
			CMD_RDX = 0X90;
			CMD_RDY = 0XD0;
		}
		else // X,Y方向与屏幕相同
		{
			CMD_RDX = 0XD0;
			CMD_RDY = 0X90;
		}
		return 1;
	}
	return 0;
}
